# BibSync

./: .gitignore  README.md  pyproject.toml  summary.md  toto.md
benchmarks/: README.md  baseline-2026-05-15.json  citation_verification.jsonl  sprint-A-final-2026-05-15.json  sprint-B-final-2026-05-16.json  sprint-C-final-2026-05-16.json
bibsync/: __init__.py  audit.py  audit_rag.py  benchmark.py  bibtex.py  cli.py  config.py  dbg.py  evidence.py  evidence_cmd.py  extract.py  fix.py  llm.py  memory.py  models.py  native_host_install.py  patches.py  picker.py  repair.py  scanner.py  scholar.py  server.py  source_rank.py  suggest.py  tex_rewrite.py  verify.py
bibsync/audit_sources/: __init__.py  _match.py  arxiv.py  cache.py  crossref.py  openalex.py  pdf.py  semantic_scholar.py  tables.py  types.py  unpaywall.py
chrome-extension/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
chrome-extension/src/: contentScript.ts  nativeBridge.ts  overleafAdapter.ts  serviceWorker.ts  types.ts
chrome-extension/src/sidePanel/: api.ts  index.html  index.ts  styles.css
examples/: README.md
examples/audit_demo/: paper.tex  references.bib
examples/audit_tier2_demo/: README.md  paper.tex  references.bib
examples/extract_demo/: intro.tex  references.bib
examples/fix_demo/: paper.tex  references.bib
examples/repair_demo/: old_bibliography.tex
examples/scan_demo/: paper.tex  references.bib
examples/suggest_demo/: intro.tex  references.bib
examples/suggest_verify_demo/: README.md  intro.tex  references.bib
native-host/: bibsync_native_host.py
tests/: test_server.py
