[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibsync"
version = "0.1.0"
description = "Automate Google Scholar BibTeX lookup, canonical-version selection, and LaTeX citation reconciliation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Abhijit Das" }]
keywords = ["bibtex", "google-scholar", "latex", "citation", "academic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "bibtexparser>=1.4,<2.0",
    "rapidfuzz>=3.0",
    "playwright>=1.40",
    "platformdirs>=4.0",
    # Tier-1+ audit (fetch paper abstracts from arXiv / Semantic Scholar / Crossref).
    # Tier-2 PDF download also uses httpx.
    "httpx>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.10"]
# Tier-2 audit: PDF extraction (pypdf). Embeddings are issued via the openai SDK
# already installed under [openai]; install both to enable Tier 2 fully:
#   pip install -e ".[openai,audit-rag]"
audit-rag = ["pypdf>=4.0"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "ruff>=0.4"]

[project.scripts]
bibsync = "bibsync.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bibsync*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
